--- a/myproject/app/src/main/resources/static/footer.html
+++ b/myproject/app/src/main/resources/static/footer.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>footer</title>
+    <title>헤더</title>
 </head>
 <body>
 <footer id="page-footer">
