--- a/myproject/app/src/main/resources/static/auth/login-form.html
+++ b/myproject/app/src/main/resources/static/auth/login-form.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>로그인</title>
     <link rel="stylesheet" href="/css/common.css">
+    <script src="/js/common.js"></script>
 </head>
 <body>
 
@@ -11,7 +12,7 @@
 
 <div id="content">
     <h2>로그인</h2>
-    <p data-th-if="${param.error}" class="error">로그인 실패</p>
+    <p data-th-if="${param.error}" class="error">로그인 실패!</p>
     <form data-th-action="@{/auth/login}" method="post">
         <div>
             <label for="email">이메일:</label>
