--- a/myproject/app/src/main/resources/static/board/form.html
+++ b/myproject/app/src/main/resources/static/board/form.html
@@ -50,14 +50,15 @@
             background-color: #4cae4c;
         }
     </style>
+    <script src="/js/common.js"></script>
 </head>
 <body>
 
-<header data-th-replace="~{header :: page-header}"></header>
 
 <div id="content" class="board-form-container">
     <h1>새 게시글</h1>
-    <form data-th-action="@{/board/add}" method="post" enctype="multipart/form-data">
+    <form data-th-action="@{/board/add}" method="POST" enctype="multipart/form-data">
+        <input type="hidden" name="no" value="39">
         <div class="form-group">
             <label for="title">제목:</label>
             <input type="text" id="title" name="title" required>
@@ -75,8 +76,6 @@
         </div>
     </form>
 </div>
-
-<footer data-th-replace="~{footer :: #page-footer}"></footer>
 
 </body>
 </html>
