--- a/myproject/app/src/main/resources/static/header.html
+++ b/myproject/app/src/main/resources/static/header.html
@@ -13,8 +13,8 @@
             <li><a href="/board/list.html">게시글</a></li>
         </ul>
     </nav>
-    <div class="login">
-        <span>홍길동</span>
+    <div class="login logged-in">
+        <span id="user-name">홍길동</span>
         <a href='#' onclick="logout(); return false">로그아웃</a>
         <form id="logout-form" method="post"></form>
         <script>
@@ -23,7 +23,7 @@
             }
         </script>
     </div>
-    <div class="login">
+    <div class="login logged-out">
         <a href='/auth/login-form.html'>로그인</a>
     </div>
 </header>
