--- a/myproject_frontend/app/index.html
+++ b/myproject_frontend/app/index.html
@@ -5,7 +5,8 @@
     <title>MyProject</title>
 </head>
 <body>
-<h1>Myproject</h1>
-<p>이 프로젝트는 Myproject의 백엔드 프로젝트다</p>
+<script>
+    location.href="home.html";
+</script>
 </body>
 </html>
