--- a/myproject_frontend/app/board/detail.html
+++ b/myproject_frontend/app/board/detail.html
@@ -70,7 +70,7 @@
 
 <div id="page-content">
     <h1>게시글</h1>
-    <form method="post"  enctype="multipart/form-data">
+    <form id="board-form" method="post" enctype="multipart/form-data">
         <div class="form-group">
             <label for="no">번호:</label>
             <input type="text" id="no" name="no" readonly>
@@ -86,14 +86,7 @@
         <div class="form-group">
             <label for="files">첨부파일:</label>
             <input type="file" id="files" name="files" multiple>
-            <ul id="attached-files">
-                <li>
-                    <div>
-                        <a href="/board/file/delete"></a>
-                        <button type="button" onclick="deleteFile(${attachedFile.no})">삭제</button>
-                    </div>
-                </li>
-            </ul>
+            <ul id="attached-files"></ul>
         </div>
         <div class="form-group">
             <label for="writer">작성자:</label>
@@ -115,25 +108,36 @@
     <a href="list.html">목록</a>
 </div>
 
+<script id="li-template" type="text/handlerbars">
+    {{#each attachedFiles}}
+    <li id="file-{{no}}">
+        <a href="/board/file/download?fileNo={{no}}">{{originFilename}}</a>
+        <button type="button" onclick="deleteFile({{no}})">삭제</button>
+    </li>
+    {{/each}}
+</script>
+
+<script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
 <script>
     const no = parseInt(new URLSearchParams(window.location.search).get("no"));
     if (isNaN(no)) {
-        alert("게시글 번호를 지정하세요");
-        throw new Error("게시글 번호가 없다");
+        alert("게시글 번호를 지정하세요!");
+        throw new Error("게시글 번호가 없습니다.");
     }
 
     const xhr = new XMLHttpRequest();
-    xhr.open("GET", `/board/detail?no=${no}`, false);
+    xhr.open("GET", `${__restServer}/board/detail?no=${no}`, false);
+    xhr.withCredentials = true;
     xhr.send();
     const response = JSON.parse(xhr.responseText);
-    console.log(response);
-
-    if (response.status === "failure") {
-        alert("해당 게시글이 존재하지 않습니다");
+    if (response.status == "failure") {
+        alert("해당 번호의 게시글이 없습니다.")
+        console.log(response.data);
         throw new Error(response.data);
     }
 
     const data = response.data;
+
     document.querySelector("#no").value = data.no;
     document.querySelector("#title").value = data.title;
     document.querySelector("#content").value = data.content;
@@ -141,13 +145,61 @@
     document.querySelector("#createDate").value = data.createDate;
     document.querySelector("#viewCount").value = data.viewCount;
 
-    function deleteBoard(no) {
-        document.getElementById("delete-form").submit();
+    const template = Handlebars.compile(document.querySelector("#li-template").innerHTML);
+    document.querySelector("#attached-files").innerHTML = template(data);
+
+    document.querySelector("#board-form").addEventListener("submit", (e) => {
+        e.preventDefault(); // 웹브라우저의 서버 요청을 막는다. 왜? AJAX로 직접 요청하기 때문이다.
+
+        const xhr = new XMLHttpRequest();
+        xhr.open("PATCH", `${__restServer}/board/update`, false);
+        xhr.setRequestHeader("X-XSRF-TOKEN", __csrfToken);
+        xhr.withCredentials = true;
+        xhr.send(new FormData(document.querySelector("#board-form")));
+
+        const response = JSON.parse(xhr.responseText);
+        if (response.status == "failure") {
+            alert("게시글 변경 실패!");
+            return;
+        }
+        location.reload();
+    });
+
+    function deleteBoard() {
+        const xhr = new XMLHttpRequest();
+        xhr.open("DELETE", `${__restServer}/board/delete?no=${no}`, false);
+        xhr.setRequestHeader("X-XSRF-TOKEN", __csrfToken);
+        xhr.withCredentials = true;
+        xhr.send();
+
+        const response = JSON.parse(xhr.responseText);
+        if (response.status == "failure") {
+            alert("게시글 삭제 실패!");
+            return;
+        }
+        location.href = "list.html";
     }
 
     function deleteFile(no) {
-        document.querySelector("#delete-file-form input[name=no]").value = no;
-        document.querySelector("#delete-file-form").submit();
+        const xhr = new XMLHttpRequest();
+        xhr.open("DELETE", `${__restServer}/board/file/delete`, false);
+        xhr.setRequestHeader("X-XSRF-TOKEN", __csrfToken);
+        xhr.withCredentials = true;
+
+        const formData = new FormData();
+        formData.append("fileNo", no);
+
+        xhr.send(formData);
+
+        const response = JSON.parse(xhr.responseText);
+        if (response.status == "failure") {
+            alert("파일 삭제 실패!");
+            return;
+        }
+
+        document.querySelector("#attached-files").removeChild(document.querySelector("#file-" + no));
+        //location.reload();
+
     }
 </script>
 </body>
