--- a/myproject_frontend/app/board/form.html
+++ b/myproject_frontend/app/board/form.html
@@ -85,7 +85,8 @@
 
         const xhr = new XMLHttpRequest();
         xhr.open("POST", `${__restServer}/board/add`, false);
-        xhr.setRequestHeader("X-XSRF-TOKEN", __csrfToken);
+        // xhr.setRequestHeader("X-XSRF-TOKEN", __csrfToken);
+        xhr.setRequestHeader("Authorization", "Bearer " + __jwtToken);
         xhr.withCredentials = true;
         xhr.send(new FormData(boardForm));
 
